# Multi-robot-SLAM-experiment

./: .gitignore  .gitmodules  README.md  slam_nav_test.launch
map_metrics/: Readme.txt  harris_suzuki.cpp  map_metrics.pro
src/: .gitignore
src/map_merging/: CMakeLists.txt  package.xml
src/map_merging/src/: map_merging.cpp
src/map_to_pose/: CMakeLists.txt  package.xml
src/map_to_pose/src/: node.cpp
src/metrics/: CMakeLists.txt  Readme.txt  package.xml
src/metrics/scripts/: bw.sh  mem_cpu.sh
src/metrics/src/: node.cpp
src/mrslam_sim/: CMakeLists.txt  package.xml
src/mrslam_sim/config/: adhoc_net.sh  net.sh
src/mrslam_sim/launch/: _multi_gmapping_merge_robot.launch  _robot_m_cgmrslam.launch  _robot_m_gmapping.launch  _robot_m_gmapping_mapmerging.launch  _robot_m_gmapping_mexplore_mapmerge.launch  _robot_m_gmapping_multirobotmapmerge.launch  _robot_m_hectormapping_mexplore_mapmerge.launch  _robot_m_hectormapping_multirobotmapmerge.launch  _robot_m_mrpt_graphslam2d.launch  _robot_m_mrpt_icp2d.launch  _robot_m_mrpt_rbpf.launch  _robot_m_mrptgraphslam2d.launch  _robot_m_nav2dkarto.launch  _robot_m_ohmtdsslam.launch  _robot_m_ohmtsdslam.launch  add_robot.launch  m_cgmrslam.launch  m_gmapping.launch  m_gmapping_mapmerging.launch  m_gmapping_mexplore_mapmerge.launch  m_gmapping_multirobotmapmerge.launch  m_hectormapping_mexplore_mapmerge.launch  m_hectormapping_multirobotmapmerge.launch  m_mrpt_icp2d.launch  m_mrpt_rbpf.launch  m_nav2dkarto.launch  m_ohmtdsslam.launch  m_ohmtsdslam.launch  mm_gmapping_mapmerging.launch  mm_gmapping_mapmerging_step1.launch  mm_gmapping_mapmerging_step3.launch  mm_gmapping_mexplore_mapmerge_step1.launch  mm_gmapping_mexplore_mapmerge_step3.launch  mm_gmapping_multirobotmapmerge_step1.launch  mm_gmapping_multirobotmapmerge_step3.launch  ms_mrpt_graphslam2d_step1.launch  ms_mrpt_graphslam2d_step2.launch  ms_mrptgraphslam2d_step1.launch  ms_mrptgraphslam2d_step2.launch  multi_gmapping.launch  (+6 more)
src/mrslam_sim/param/: dwa_local_planner_params.yaml  global_costmap_params.yaml  gmapping.yaml  local_costmap_params.yaml  mrpt_graphslam2d.ini  mrpt_icp2d.ini  mrpt_rbpf.ini  ros_odometry_2DRangeScans_LC_MR_simul.ini  rosconsole.config
src/mrslam_sim/rviz/: m_cgmrslam.rviz  m_gmapping.rviz  m_gmapping_mapmerging.rviz  m_gmapping_mexplore_mapmerge.rviz  m_gmapping_multirobotmapmerge.rviz  m_mrpt_rbpf.rviz  m_ohmtdsslam.rviz  m_ohmtsdslam.rviz  mm_gmapping_mapmerging.rviz  mm_gmapping_multirobotmapmerge.rviz  ms_mrpt_graphslam2d.rviz  ms_mrptgraphslam2d.rviz  multi_gmapping.rviz  multi_gmapping_merge.rviz  multimaster_gmapping_merge.rviz  one_gmapping.rviz  s_gmapping.rviz
src/mrslam_sim/scripts/: .mm_gmapping_multirobotmapmerge_step1.sh.swp  adhoc_net.sh  install_ssh_keys.sh  interfaces  mm_gmapping_mapmerging_step1.sh  mm_gmapping_mapmerging_step2.sh  mm_gmapping_mapmerging_step3.sh  mm_gmapping_mexplore_mapmerge_step1.sh  mm_gmapping_mexplore_mapmerge_step2.sh  mm_gmapping_mexplore_mapmerge_step3.sh  mm_gmapping_multirobotmapmerge_step1.sh  mm_gmapping_multirobotmapmerge_step3.sh  ms_mrpt_graphslam2d_robot0.sh  ms_mrpt_graphslam2d_robot1.sh  ms_mrptgraphslam2d_robot0.sh  ms_mrptgraphslam2d_robot1.sh
src/mrslam_sim/worlds/: willowgarage.world  willowgarage_original.world
src/msg_collector/: CMakeLists.txt  package.xml
src/msg_collector/src/: node_base.cpp  node_laser_scan.cpp  node_nav2d_scan.cpp  node_occupancy_grid.cpp
src/multirobot_map_merge/: CMakeLists.txt
src/multirobot_map_merge/src/combine_grids/: merging_pipeline.cpp
src/range_ctrl/: CMakeLists.txt  package.xml
src/range_ctrl/src/: node_base.cpp  node_cg_mrslam.cpp  node_nav2d_scan.cpp  node_observation.cpp  node_odom.cpp
src/turtlebot3/turtlebot3_description/urdf/: turtlebot3_waffle.gazebo.xacro
src/turtlebot3/turtlebot3_navigation/param/: global_costmap_params.yaml  local_costmap_params.yaml
src/turtlebot3_description/urdf/: turtlebot3_burger.gazebo.no_odom.xacro  turtlebot3_burger.gazebo.xacro  turtlebot3_burger.urdf.no_odom.xacro  turtlebot3_waffle.gazebo.no_odom.xacro  turtlebot3_waffle.urdf.no_odom.xacro
src/turtlebot3_pkgs/turtlebot3_description/urdf/: turtlebot3_burger.gazebo.xacro  turtlebot3_waffle.gazebo.xacro
src/turtlebot3_pkgs/turtlebot3_gazebo/models/: turtlebot3.world
src/turtlebot3_pkgs/turtlebot3_navigation/: CMakeLists.txt
