<?xml version="1.0"?>
<package format="2">
  <name>map_to_pose</name>
  <version>1.0.0</version>
  <description>The map_to_pose package</description>

  <maintainer email="max_kuzmin@outlook.com">MaxGsomGsom</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>

  </export>
</package>
