<?xml version="1.0"?>
<package format="2">
  <name>mrslam_sim</name>
  <version>0.0.0</version>
  <description>The mrslam_sim package</description>
  <maintainer email="max_kuzmin@outlook.com">Maxim Kuzmin</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  <depend>map_to_pose</depend>
  <depend>multimaster_fkie</depend>
  <depend>map_merging</depend>
  <depend>turtlebot3_description</depend>
  <depend>multirobot_map_merge</depend>
  </export>
</package>
