<?xml version="1.0"?>
<package format="2">
  <name>mrslam_sim</name>
  <version>1.0.0</version>
  <description>Multi-robot SLAM simulation experiment</description>
  <maintainer email="max_kuzmin@outlook.com">Maxim Kuzmin</maintainer>
  <license>BSD3</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  <depend>map_to_pose</depend>
  <depend>multimaster_fkie</depend>
  <depend>map_merging</depend>
  <depend>turtlebot3_description</depend>
  <depend>multirobot_map_merge</depend>
  <depend>hector_slam</depend>
  <depend>mrpt_slam</depend>
  </export>
</package>
