<?xml version="1.0"?>
<package format="2">
  <name>range_ctrl</name>
  <version>0.0.0</version>
  <description>The range_ctrl package</description>
  <maintainer email="max@todo.todo">max</maintainer>
  <license>TODO</license>

  <depend>roscpp</depend>
  <depend>tf2_ros</depend>
  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
