<?xml version="1.0"?>
<package format="2">
  <name>range_ctrl</name>
  <version>0.0.0</version>
  <description>The range_ctrl package</description>
  <maintainer email="max_kuzmin@outlook.com">Maxim Kuzmin</maintainer>
  <license>TODO</license>

  <depend>roscpp</depend>
  <depend>nav_msgs</depend>
  <depend>cg_mrslam</depend>
  <depend>sensor_msgs</depend>
  <depend>nav2d_msgs</depend>
  <depend>mrpt_rbpf_slam</depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
